# PervasiveComputing

./: .env.example  .gitignore  .gitmodules  README.md
backend/backend-db/: .env.example  CMakeLists.txt
backend/backend-db/src/: dotenv.cpp  dotenv.h  main.cpp
backend/src/: main.cpp
docs/: backend.md  certificates.md  firmware.md  mqtt.md
firmware/LoRaWAN-HelloWorld-radiolib/: ESP32DevKitC-LoRa-1672.fzz  LoRaWan-HellpWorld-RadioLib.cflags  LoRaWan-HellpWorld-RadioLib.config  LoRaWan-HellpWorld-RadioLib.creator  LoRaWan-HellpWorld-RadioLib.cxxflags  LoRaWan-HellpWorld-RadioLib.files  LoRaWan-HellpWorld-RadioLib.includes  PH-Sensor-Calibration.odt  compile_commands.json  extra_script.py  platformio.config  platformio.files  platformio.includes  platformio.ini
firmware/LoRaWAN-HelloWorld-radiolib/KiCAD/: AdditionalFromVoc.kicad_sym
firmware/LoRaWAN-HelloWorld-radiolib/src/: DS18B20.cpp  DS18B20.h  EnvironmentalMonitor.cpp  GPS.cpp  GPS.h  GravityTDS1.cpp  GravityTDS1.h  LoRaWAN.h  LoRaWAN.hpp  PH4502C.cpp  PH4502C.h  TurbiditySensor.cpp  TurbiditySensor.h
firmware/src/: main.cpp
frontend/: index.html  package.json
frontend/css/: styles.css
frontend/data/: mockMeasurements.json
frontend/js/: main.js  router.js
frontend/js/api/: measurementsApi.js
frontend/js/components/: dashboardHeader.js  deviceCard.js  gpsCard.js  lineChart.js  sensorCard.js  statCard.js  statusBadge.js  timeRangeSelector.js
frontend/js/config/: devices.js
frontend/js/pages/: conductivityDetailPage.js  overviewPage.js  (+3 more)
mqtt/: run-all.sh  run-mqttcli-db.sh  ttn-bridge.json
(+13 files in other folders)
